--- a/EE Calculator/EE Calculator.csproj
+++ b/EE Calculator/EE Calculator.csproj
@@ -146,7 +146,7 @@
   <ItemGroup>
     <Compile Include="Activation\ActivationHandler.cs" />
     <Compile Include="Behaviors\NavigationViewHeaderBehavior.cs" />
-    <Compile Include="Behaviors\NavigationViewHeaderMode.cs" />    
+    <Compile Include="Behaviors\NavigationViewHeaderMode.cs" />
     <Compile Include="Controls\CalculatorControl.xaml.cs">
       <DependentUpon>CalculatorControl.xaml</DependentUpon>
     </Compile>
@@ -155,6 +155,7 @@
     <Compile Include="Helpers\SettingsStorageExtensions.cs" />
     <Compile Include="MathEngine\MathFormatter.cs" />
     <Compile Include="MathEngine\PageEngine.cs" />
+    <Compile Include="Models\DynamicPageItem.cs" />
     <Compile Include="Models\TabViewItemData.cs" />
     <Compile Include="Services\ActivationService.cs" />
     <Compile Include="Activation\DefaultActivationHandler.cs" />
@@ -168,6 +169,7 @@
     <Compile Include="ViewModels\SavedCalcsViewModel.cs" />
     <Compile Include="ViewModels\SettingsViewModel.cs" />
     <Compile Include="ViewModels\ShellViewModel.cs" />
+    <Compile Include="Views\CalculatorPage.xaml.cs" />
     <Compile Include="Views\HelpPage.xaml.cs">
       <DependentUpon>HelpPage.xaml</DependentUpon>
     </Compile>
@@ -190,7 +192,8 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>    <Page Include="Controls\CalculatorControl.xaml">
+  <ItemGroup>
+    <Page Include="Controls\CalculatorControl.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -213,6 +216,10 @@
     <Page Include="Styles\TextBlock.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\CalculatorPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Views\HelpPage.xaml">
       <Generator>MSBuild:Compile</Generator>
